# neutron-diffuse

./: .gitignore  CHANGELOG.md  HANDOFF.md  Makefile  NOTICE  PROVENANCE.md  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: README.md  browser-hosted-app-plan.md  build_manual.js  build_manual.py  commands.md  github-pages-webgpu-plan.md  interactive.md  nebula3d_manual.docx  plotting_commands.md  quick_start.md  web.md
docs/algorithms/: al_removal.md  bragg_cleanup.md  delta_pdf.md  inpainting.md  powder_rings.md
docs/reports/: 2026-07-02_browser_audit_perf.md
examples/: README.md  _azimuthal_texture_cmp.py  _direct_beam_linecuts.py  _normal_slice_cmp.py  _offset_cmp.py  _percentile_cmp.py  _profile_method_cmp.py  _qstep_cmp.py  _radial_continuity_cmp.py  _ring_center_fit.py  _ringfit.py  _slice_view.py  _template_cmp.py  _texture_cmp.py  backfill_bragg_3d.py  compare_delta_pdf_frames.py  compare_delta_pdf_methods.py  compare_punch_frames.py  compare_ring_models.py  delta_pdf.py  delta_pdf_consistency.py  delta_pdf_plane.py  explore.py  explore_delta_pdf.py  explore_delta_pdf_multi.py  explore_delta_pdf_ortho.py  explore_slice.py  explore_volume.py  flatten_background_3d.py  investigate_bragg_diffuse.py  pdf_3d.py  plot_punch_slices.py  punch_bragg_3d.py  remove_rings_3d.py  ring_linecut.py  run_pipeline.py  run_pipeline_pdf.py  tune_parametric_ring.py  validate_flatten.py
scripts/: check.sh  export_web_assets.py  profile_pipeline.py
src/ndiff/: __init__.py  core.py  pipeline.py  webbridge.py
src/ndiff/analysis/: __init__.py  bragg.py  bragg_fill.py  delta_pdf.py  peak_profile.py
src/ndiff/background/: __init__.py  aluminum.py  masking.py
src/ndiff/inpainting/: __init__.py  interpolation.py  pipeline.py  symmetry.py  tv_inpainting.py
src/ndiff/io/: __init__.py  hkl_reader.py  mantid_nxs.py
src/ndiff/preprocessing/: __init__.py  backfill.py  empty_subtraction.py  masked_rings.py  parametric_ring.py  powder_rings.py  radial_background.py  radial_flatten.py  residual_rings.py  ring_model.py  sampling.py  symmetrize.py
src/ndiff/server/: __init__.py  app.py  cli.py  config.py  consistency.py  datasets.py  deltapdf.py  deps.py  jobs.py  params.py  schemas.py  volumes.py
src/ndiff/utils/: __init__.py  reciprocal_space.py
src/ndiff/visualization/: __init__.py  interactive.py  overview.py  profiles.py  slices.py
src/nebula3d/: __init__.py  _version.py  core.py  pipeline.py  webbridge.py
src/nebula3d/analysis/: __init__.py  bragg.py  bragg_fill.py  delta_pdf.py  peak_profile.py
src/nebula3d/inpainting/: __init__.py  interpolation.py  pipeline.py  symmetry.py  tv_inpainting.py
src/nebula3d/io/: __init__.py  hkl_reader.py  mantid_nxs.py
src/nebula3d/preprocessing/: __init__.py  backfill.py  (+8 more)
tests/: test_aluminum.py  test_bragg.py  test_bragg_profile_widths.py  test_bragg_qspace_phase0.py  test_bragg_qspace_phase1.py  test_bragg_qspace_phase2.py  test_bragg_qspace_phase3.py  test_bragg_qspace_spherical.py  test_inpainting.py  test_masked_rings.py  test_parametric_ring.py  test_peak_profile.py  test_pipeline.py  test_pipeline_orchestration.py  test_powder_rings.py  test_radial_background.py  test_radial_flatten.py  test_server.py  test_visualization.py  test_webbridge.py
web/: .env.pages  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: POC_README.md  poc-pyodide.html
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+58 files in other folders)
