[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neutron-diffuse"
version = "0.2.0"
description = "3D diffuse neutron scattering processing: powder ring removal and 3D-ΔPDF"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Tsung-Han Yang" }]
keywords = ["neutron scattering", "diffuse scattering", "crystallography", "inpainting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "httpx",
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[project.scripts]
ndiff-web = "ndiff.server.cli:main"

[project.urls]
Repository = "https://github.com/drthyang/neutron-diffuse"
Changelog = "https://github.com/drthyang/neutron-diffuse/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ndiff.server" = ["static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
# E741: crystallographic variables l (Miller index) and I (intensity) are conventional
# E702: compact semicolon-separated statements common in scientific helpers
ignore = ["E741", "E702"]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["ANN", "E402"]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.10"
strict = false
disable_error_code = ["type-arg", "no-any-return", "unused-ignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ndiff --cov-report=term-missing"
